<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/bg"
    tools:context="com.registerservic.app.RegisterServiceActivity">


    <EditText
        android:id="@+id/name_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:singleLine="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:textColorHint="@color/list_item_txt_color"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp" />

    <EditText
        android:id="@+id/service_type_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColorHint="@color/list_item_txt_color"
        android:layout_below="@+id/name_id"
        android:hint="@string/service_type"/>

    <EditText
        android:id="@+id/address_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColorHint="@color/list_item_txt_color"
        android:layout_below="@+id/service_type_id"
        android:hint="@string/address"/>

    <EditText
        android:id="@+id/phone_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:singleLine="true"
        android:inputType="phone"
        android:textColorHint="@color/list_item_txt_color"
        android:layout_below="@+id/address_id"
        android:hint="@string/phone"/>

    <EditText
        android:id="@+id/desc_id"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        android:gravity="top"
        android:textColorHint="@color/list_item_txt_color"
        android:layout_below="@+id/phone_id"
        android:hint="@string/desc"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:onClick="registerBtnClick"/>

</RelativeLayout>
